update repo link for review/star

--- a/Audio-Transcription/complete.html
+++ b/Audio-Transcription/complete.html
@@ -19,6 +19,6 @@
       <div class="button" id="saveCapture">Save Capture</div>
       <div class="button" id="close">Close</div>
     </div>
-    <div class="notes">Thank you for using the extension! Please go <div id="review">here</div> to leave a review!</div>
+    <div class="notes">Thank you for using the extension! Please go <div id="review">here</div> to leave a star!</div>
   </body>
 </html>
