add voice activity detection

--- a/Audio-Transcription/options.html
+++ b/Audio-Transcription/options.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Audio Transcription Options</title>
-    <script src="options.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="options.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
-    <div class="header"><img src="./collabora.png"/> <h1>Audio Transcription</h1></div>
-    <div class="button" id="stop">Stop Capture</div>
+    <script src="ort.min.js"></script>
+    <script src="options.js"></script>
 </body>
 
 </html>
