--- a/Audio-Transcription/popup.html
+++ b/Audio-Transcription/popup.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-  <div class="header"><img src="./collabora.png"/> <h1>Audio Transcription</h1></div>
+  <div class="header"><img src="./icon128.png"/> <h1>Audio Transcription</h1></div>
   <div class="button-container">
     <div class="button" id="startCapture">Start Capture</div>
     <div class="button" id="stopCapture" disabled>Stop Capture</div>
