--- a/Audio-Transcription-Firefox/popup.html
+++ b/Audio-Transcription-Firefox/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Audio Capture</title>
+  <title>Audio Transcription</title>
   <script src="popup.js"></script>
   <link rel="stylesheet" href="style.css" type="text/css">
 </head>
