--- a/Audio-Transcription/popup.html
+++ b/Audio-Transcription/popup.html
@@ -11,5 +11,9 @@
     <div class="button" id="startCapture">Start Capture</div>
     <div class="button" id="stopCapture" disabled>Stop Capture</div>
   </div>
+  <div class="checkbox-container">
+    <input type="checkbox" id="useServerCheckbox">
+    <label for="useServerCheckbox">Use Collabora Whisper-Live Server</label>
+  </div>
 </body>
 </html>
