--- a/Audio-Transcription-Firefox/popup.html
+++ b/Audio-Transcription-Firefox/popup.html
@@ -15,6 +15,8 @@
     <input type="checkbox" id="useServerCheckbox">
     <label for="useServerCheckbox">Use Collabora Whisper-Live Server</label>
   </div>
+  <textarea id="waitTextBox" style="display: none;"></textarea>
+
   <div class="checkbox-container">
     <input type="checkbox" id="useMultilingualCheckbox">
     <label for="useMultilingualCheckbox">Use Multilingual Model</label>
