feat: add large-v3 model

--- a/Audio-Transcription-Chrome/popup.html
+++ b/Audio-Transcription-Chrome/popup.html
@@ -140,6 +140,7 @@
       <option value="small" selected>Small</option>
       <option value="medium">Medium</option>
       <option value="large-v2">Large-v2</option>
+      <option value="large-v3">Large-v3</option>
     </select>
   </div>
 </body>
