--- a/Audio-Transcription-Firefox/popup.html
+++ b/Audio-Transcription-Firefox/popup.html
@@ -142,6 +142,7 @@
       <option value="small" selected>Small</option>
       <option value="medium">Medium</option>
       <option value="large-v2">Large-v2</option>
+      <option value="large-v3">Large-v3</option>
     </select>
   </div>
 </body>
