--- a/Audio-Transcription-Chrome/popup.html
+++ b/Audio-Transcription-Chrome/popup.html
@@ -13,7 +13,7 @@
   </div>
   <div class="checkbox-container">
     <input type="checkbox" id="useServerCheckbox">
-    <label for="useServerCheckbox">Use Collabora Whisper-Live Server</label>
+    <label for="useServerCheckbox">Use Hackaton Whisper-Live Server</label>
   </div>
   <div class="checkbox-container">
     <input type="checkbox" id="useVadCheckbox">
@@ -164,7 +164,7 @@
       <option value="he">Hebrew</option>
       <option value="hi">Hindi</option>
       <option value="hu">Hungarian</option>
-      <option value="is">Icelandic</option>
+      <option value="is">Icelandic</option> -->
       <option value="id">Indonesian</option>
       <option value="it">Italian</option>
       <option value="ja">Japanese</option>
@@ -173,7 +173,7 @@
       <option value="kk">Kazakh</option>
       <option value="km">Khmer</option>
       <option value="ko">Korean</option>
-      <option value="lo">Lao</option>
+      <!-- <option value="lo">Lao</option>
       <option value="la">Latin</option>
       <option value="lv">Latvian</option>
       <option value="ln">Lingala</option>
@@ -193,11 +193,11 @@
       <option value="nn">Nynorsk</option>
       <option value="oc">Occitan</option>
       <option value="ps">Pashto</option>
-      <option value="fa">Persian</option>
+      <option value="fa">Persian</option> -->
       <option value="pl">Polish</option>
       <option value="pt">Portuguese</option>
       <option value="pa">Punjabi</option>
-      <option value="ro">Romanian</option> -->
+      <option value="ro">Romanian</option>
       <option value="ru">Russian</option>
       <!-- <option value="sa">Sanskrit</option>
       <option value="sr">Serbian</option>
