--- a/Audio-Transcription-Chrome/popup.html
+++ b/Audio-Transcription-Chrome/popup.html
@@ -10,6 +10,7 @@
   <div class="button-container">
     <div class="button" id="startCapture">Start Capture</div>
     <div class="button" id="stopCapture" disabled>Stop Capture</div>
+    <!-- <div class="button" id="getSummary">Get Summary</div> -->
   </div>
   <div class="checkbox-container">
     <input type="checkbox" id="useServerCheckbox">
